Updated 'artist-card' button txt to 'Profile'

--- a/src/app/artists/artist-card/artist-card.component.html
+++ b/src/app/artists/artist-card/artist-card.component.html
@@ -14,8 +14,8 @@
         </div>
     </div>
     <div class="card-footer">
-            <button class="btn btn-primary float-right" [routerLink] ="['/artists', artist.id]" style="width: 190px; margin: 0 10% 0% 10%; font-size: 18px; border-radius: 8px;">
-              See Details
+            <button class="btn btn-primary float-right" [routerLink] ="['/artists', artist.id]" style="width: 190px; margin: 0 10% 0% 10%; font-size: 19px; border-radius: 8px;">
+              Profile
             </button>
           </div>
     </div>
