Edited 'Welcome' Component's button txt

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -11,8 +11,8 @@
       type="button"
       routerLink="/artists"
       class="btn btn-primary text-center mt-3 mx-auto"
-      style="width: 225px; font-size: 28px; border-radius: 10px;"
+      style="width: 300px; font-size: 28px; border-radius: 10px;"
     >
-      View Artists
+      View Artist Gallery
     </button>
   </div>
