Re-edited "Welcome" component's button txt

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -13,6 +13,6 @@
       class="btn btn-primary text-center mt-3 mx-auto"
       style="width: 300px; font-size: 28px; border-radius: 10px;"
     >
-      View Artist Gallery
+      View Artist Library
     </button>
   </div>
