Adding initial YouTube-Player imports/routing

--- a/src/app/artists/artist-track-youtube-player/artist-track-youtube-player.component.html
+++ b/src/app/artists/artist-track-youtube-player/artist-track-youtube-player.component.html
@@ -1,1 +1,10 @@
-<p>artist-track-youtube-player works!</p>
+<br>
+
+<div class= "container">
+    <youtube-player
+        videoId="NqYjATuc69Y"
+        suggestedQuality="highres"
+        [height]="600"
+        [width]="1080">
+    </youtube-player>
+</div>
