Added functional param mapping for YT-P

--- a/src/app/artists/artist-track-youtube-player/artist-track-youtube-player.component.html
+++ b/src/app/artists/artist-track-youtube-player/artist-track-youtube-player.component.html
@@ -2,7 +2,7 @@
 
 <div class= "container">
     <youtube-player
-        videoId="NqYjATuc69Y"
+        videoId="{{ trackUrl }}"
         suggestedQuality="highres"
         [height]="600"
         [width]="1080">
