Added border to YT-P component for track video

--- a/src/app/artists/artist-track-youtube-player/artist-track-youtube-player.component.html
+++ b/src/app/artists/artist-track-youtube-player/artist-track-youtube-player.component.html
@@ -4,7 +4,8 @@
     <youtube-player
         videoId="{{ trackUrl }}"
         suggestedQuality="highres"
-        [height]="600"
-        [width]="1080">
+        [height]="630"
+        [width]="1115"
+        style="margin: 0% 0% 0% 0%">
     </youtube-player>
 </div>
