--- a/src/app/artists/artist-track-youtube-player/artist-track-youtube-player.component.css
+++ b/src/app/artists/artist-track-youtube-player/artist-track-youtube-player.component.css
@@ -1,7 +1,7 @@
 .container {
     border: 7px solid #0069D9;
     padding-top: .5%;
-    padding-bottom: 0%;
+    padding-bottom: .25%;
     padding-left: .5%;
-    padding-right: .5%;
+    padding-right: .75%;
 }
