Updated 'Welcome' component's header txt

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron text-center">
     <h1 class="display-4" style="color: #0069D9;">Welcome to {{ title }}<img style="width: 75px; height: 75px;"src="assets/img/electronica.png"></h1>
     <br>
-    <h2 class="display-6"><em>A curated selection of the Universe's best electronic music artists</em></h2>
+    <h2 class="display-6"><em>A curated selection of the Universe's best electronic music</em></h2>
     <br>
     <h4 class="display-10"><em style="color: #0069D9; opacity: .65;">"Electronica" (i-ˌlek-ˈträ-ni-kə): A style of electronic music that possesses an ambient, esoteric, or cerebral quality</em></h4>
     <br>
