Edited font-weight on 'track-title', YT-P

--- a/src/app/artists/artist-track-youtube-player/artist-track-youtube-player.component.html
+++ b/src/app/artists/artist-track-youtube-player/artist-track-youtube-player.component.html
@@ -3,7 +3,7 @@
 <span *ngFor="let album of artist.album">
     <span *ngFor="let track of album.trackList">
         <span *ngIf="trackId == track.trackId">
-            <h3><em>"{{ track.trackTitle }}"</em></h3>
+            <h3><em style="font-weight: 625;">"{{ track.trackTitle }}"</em></h3>
             <h4><span style="text-decoration-line: underline;">Album</span>: <em>{{album.title}}</em></h4>
         </span>
     </span>
