Updated title name URL styling, 'artist-details'

--- a/src/app/artists/artist-details/artist-details.component.html
+++ b/src/app/artists/artist-details/artist-details.component.html
@@ -4,7 +4,7 @@
 
     <ul style="list-style: none;">
       <li>
-        <a class="e_blue_text" href="{{ artist.url }}" target="_blank" rel="noopener"><h1 class="artist_name_title">{{ artist.name }}</h1></a>
+        <h1 class="artist_name_title"><a class="e_blue_text" href="{{ artist.url }}" target="_blank" rel="noopener">{{ artist.name }}</a></h1>
       </li>
       <li>
         <a href="{{ artist.facebookUrl }}" target="_blank" rel="noopener"><img class="facebook_badge" src="assets/img/facebook_icon.png" alt="Facebook"></a>
