--- a/src/app/artists/artist-curated-track-youtube-player/artist-curated-track-youtube-player.component.css
+++ b/src/app/artists/artist-curated-track-youtube-player/artist-curated-track-youtube-player.component.css
@@ -15,3 +15,12 @@
     padding-left: .35%;
     padding-right: .75%;
 }
+
+h1 {
+    font-weight: bold;
+    text-decoration-line: underline;
+}
+
+em {
+    font-weight: 645;
+}
