Refactored styling to CSS sheet, 'AlbumTrack YT-P'

--- a/src/app/artists/artist-track-youtube-player/artist-track-youtube-player.component.css
+++ b/src/app/artists/artist-track-youtube-player/artist-track-youtube-player.component.css
@@ -10,3 +10,16 @@
     padding-left: .35%;
     padding-right: .75%;
 }
+
+h1 {
+    font-weight: bold;
+    text-decoration-line: underline;
+}
+
+.album-track-title {
+    font-weight: 645;
+}
+
+.album-title {
+    text-decoration-line: underline;
+}
