--- a/src/app/artists/artist-card/artist-card.component.html
+++ b/src/app/artists/artist-card/artist-card.component.html
@@ -1,9 +1,9 @@
 <div class="card">
-    <div class="inner">
+  <div class="inner">
     <img
         class="card-img-top cover"
         src="assets/img/{{ artist.id }}.jpg"
-        alt="ArtistID: {{ artist.id }}"
+        alt="{{ artist.name }}"
     />
     <div class="card-body">
       <h5 class="card-title" style="font-weight: bold; text-align: center; text-decoration-line: underline;">{{ artist.name }}</h5>
@@ -11,12 +11,12 @@
       <div class="scrollable">
         <h6 class="card-title"><span style="font-weight: 625; text-decoration-line: underline;">Home-Country</span>: <em>{{ artist.homecountry }}</em></h6>
         <h6 class="card-text"><span style="font-weight: 625; text-decoration-line: underline;">Genre</span>: <em>{{ artist.genre }}</em></h6>
-        </div>
+      </div>
     </div>
     <div class="card-footer">
             <button class="btn btn-primary float-right" [routerLink] ="['/artists', artist.id]" style="width: 190px; margin: 0 10% 0% 10%; font-size: 19px; border-radius: 8px;">
               Profile
             </button>
-          </div>
     </div>
+  </div>
 </div>
