--- a/src/app/artists/artist-details/artist-details.component.html
+++ b/src/app/artists/artist-details/artist-details.component.html
@@ -14,6 +14,7 @@
         <a href="{{ artist.spotifyUrl }}" target="_blank" rel="noopener"><img class="spotify_badge" src="assets/img/spotify_icon_small.png" alt="Spotify"></a>
         <a href="{{ artist.appleMusicUrl }}" target="_blank" rel="noopener"><img class="applemusic_badge" src="assets/img/applemusic_icon_small.png" alt="Apple Music"></a>
         <a href="{{ artist.soundcloudUrl }}" target="_blank" rel="noopener"><img class="soundcloud_badge" src="assets/img/soundcloud_icon.png" alt="Soundcloud"></a>
+        <a href="{{ artist.tidalUrl }}" target="_blank" rel="noopener"><img class="tidal_badge" src="assets/img/tidal_icon.png" alt="Tidal"></a>
       </li>
       <li class="artist_website_link"><h6><a href="{{ artist.url }}" target="_blank" rel="noopener">{{ artist.name }}'s Website</a></h6></li>
       <li><h6><span class="artist_personal_info">Home-Country</span>: <em>{{ artist.homecountry }}</em></h6></li>
