Added Pandora URL's to all artist profiles

--- a/src/app/artists/artist-details/artist-details.component.html
+++ b/src/app/artists/artist-details/artist-details.component.html
@@ -15,6 +15,7 @@
         <a href="{{ artist.appleMusicUrl }}" target="_blank" rel="noopener"><img class="applemusic_badge" src="assets/img/applemusic_icon_small.png" alt="Apple Music"></a>
         <a href="{{ artist.soundcloudUrl }}" target="_blank" rel="noopener"><img class="soundcloud_badge" src="assets/img/soundcloud_icon.png" alt="Soundcloud"></a>
         <a href="{{ artist.tidalUrl }}" target="_blank" rel="noopener"><img class="tidal_badge" src="assets/img/tidal_icon.png" alt="Tidal"></a>
+        <a href="{{ artist.pandoraUrl }}" target="_blank" rel="noopener"><img class="pandora_badge" src="assets/img/pandora_icon.png" alt="Tidal"></a>
         <a href="{{ artist.googlePlayMusicUrl }}" target="_blank" rel="noopener"><img class="googleplaymusic_badge" src="assets/img/googleplaymusic_icon.png" alt="Google Play Music"></a>
       </li>
       <li class="artist_website_link"><h6><a href="{{ artist.url }}" target="_blank" rel="noopener">{{ artist.name }}'s Website</a></h6></li>
