--- a/src/app/artists/artist-details/artist-details.component.css
+++ b/src/app/artists/artist-details/artist-details.component.css
@@ -86,7 +86,7 @@
 .tidal_badge {
     width: 37.5px;
     height: 37.5px;
-    margin-right: 1px;
+    margin-right: .5px;
     transition: all 1.5s ease;
 }
 
@@ -94,10 +94,22 @@
     transform: scale(1.11);
 }
 
+.pandora_badge {
+    width: 37.5px;
+    height: 37.5px;
+    margin-right: .5px;
+    transition: all 1.5s ease;
+}
+
+.pandora_badge:hover {
+    transform: scale(1.11);
+}
+
 .googleplaymusic_badge {
     width: 37.5px;
     height: 37.5px;
     margin-right: 5px;
+    margin-left: -2.5px;
     transition: all 1.5s ease;
 }
 
