--- a/src/app/artists/artist-details/artist-details.component.css
+++ b/src/app/artists/artist-details/artist-details.component.css
@@ -86,11 +86,22 @@
 .tidal_badge {
     width: 37.5px;
     height: 37.5px;
-    margin-right: .5px;
+    margin-right: 4px;
     transition: all 1.5s ease;
 }
 
 .tidal_badge:hover {
+    transform: scale(1.11);
+}
+
+.amazonmusic_badge {
+    width: 37.5px;
+    height: 37.5px;
+    margin-right: .25px;
+    transition: all 1.5s ease;
+}
+
+.amazonmusic_badge:hover {
     transform: scale(1.11);
 }
 
