Edited proerpty name for artist's CuratedTrack

--- a/src/app/artists/artist-curated-track-youtube-player/artist-curated-track-youtube-player.component.html
+++ b/src/app/artists/artist-curated-track-youtube-player/artist-curated-track-youtube-player.component.html
@@ -1,6 +1,6 @@
 <br>
 <h1>{{ artist.name }}</h1>
-<h2><img class="curated_track_electronica_icon" src="assets/img/electronica.png" alt="Electronica">Electronica's Curated Track of Choice: <em>"{{ artist.curatedTrack }}"</em><img class="curated_track_electronica_icon" src="assets/img/electronica.png" alt="Electronica"></h2>
+<h2><img class="curated_track_electronica_icon" src="assets/img/electronica.png" alt="Electronica">Electronica's Curated Track of Choice: <em>"{{ artist.curatedTrackTitle }}"</em><img class="curated_track_electronica_icon" src="assets/img/electronica.png" alt="Electronica"></h2>
 <br>
 <div class= "container">
     <youtube-player
