--- a/src/app/artists/artist-card/artist-card.component.css
+++ b/src/app/artists/artist-card/artist-card.component.css
@@ -1,11 +1,12 @@
 .card {
     width: 18rem;
-    height: 30rem;
+    height: 29rem;
     margin: 5px;
     max-width: 100%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); /* Add shadows to create the "card" effect */
     transition: 0.3s;
     border-radius: 5px; /* Add rounded corners to the top left and the top right corner of the image, 5px rounded corners */
+  
   }
   
   .card-img-top {
@@ -22,6 +23,10 @@
     max-height: 6.42rem;
   }
   
+  .card-footer {
+    height: 100px;
+  }
+
   /* On mouse-over, add a deeper shadow */
   .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.42);
