--- a/src/app/artists/artist-details/artist-details.component.css
+++ b/src/app/artists/artist-details/artist-details.component.css
@@ -139,14 +139,15 @@
 }
 
 .curated_track_title {
-    font-size: 18px;
-    margin-top: 30px;
+    font-size: 19px;
+    margin-top: 20px;
     font-weight: 650;
+    margin-left: -7.5px;
 }
 
 .curated_track_electronica_icon {
-    width: 45px;
-    height:45px;
+    width: 50px;
+    height: 50px;
 }
 
 .curated_track_youtube_icon {
