--- a/src/app/artists/artist-details/artist-details.component.html
+++ b/src/app/artists/artist-details/artist-details.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row my-3">
+    <div class="row my-3" style="margin-bottom: 12px;">
     <img *ngIf="artist" class="float-right img-fluid img-thumbnail" style="max-width: 30%; max-height: 255px;" src="assets/img/{{ artist.id }}.jpg" alt="{{ artist.name }}" />
 
     <ul style="list-style: none;">
@@ -26,7 +26,7 @@
     </ul>
   </div>
 
-  <div class="row" style="margin-top: 10px;" *ngFor="let album of artist.album">
+  <div class="row" *ngFor="let album of artist.album">
     <h4><span class="album_title">Spotlight Album/EP</span>: <em>{{ album.title }}</em> ({{ album.releaseYear }})</h4>
     <a href="{{ album.albumSpotifyUrl }}" target="_blank" rel="noopener"><img class="album_spotify_icon" src="assets/img/spotify_icon.png" alt="Spotify"></a><a href="{{ album.albumAppleMusicUrl }}" target="_blank" rel="noopener"><img class="album_applemusic_icon" src="assets/img/applemusic_icon.png" alt="Apple Music"></a>
     <table class="table table-striped" style="border: 4px solid #0069D9;">
