Adjusted NGYouTubePlayer's video quality to hd1080

--- a/src/app/artists/artist-track-youtube-player/artist-track-youtube-player.component.html
+++ b/src/app/artists/artist-track-youtube-player/artist-track-youtube-player.component.html
@@ -12,7 +12,7 @@
 <div class= "container">
     <youtube-player
         videoId="{{ trackUrl }}"
-        suggestedQuality="highres"
+        suggestedQuality="hd1080"
         [height]="630"
         [width]="1107.5"
         style="margin: 0% 0% 0% 0%">
